# codes-storage-server-backup

./: .gitignore  Makefile.am  README.txt  configure.ac
allocation_files/: allocation-bb-1K.conf  allocation.conf  workload-2K-bb-no-bc.conf  workloads-1K-bb-no-bc.conf  workloads-1K-bb.conf
checkpoint-study/allocations/contiguous/: cont-alloc-8832-1024_7500.conf  cont-alloc-8832-2048.conf  cont-alloc-8832-2048_6000.conf  cont-alloc-8832-4096_4000.conf  cont-alloc-8832-512_8000.conf  cont-alloc-8832-8192.conf  cont-alloc-8832-8192_600.conf
checkpoint-study/allocations/random-node/: rand_node0-alloc-8832-1024.conf  rand_node0-alloc-8832-1024_7500.conf  rand_node0-alloc-8832-2048.conf  rand_node0-alloc-8832-2048_6000.conf  rand_node0-alloc-8832-4096_4000.conf  rand_node0-alloc-8832-512.conf  rand_node0-alloc-8832-512_8000.conf  rand_node0-alloc-8832-8192_600.conf
checkpoint-study/config-files/: test-checkpoint-dfly-1T-adap.conf  test-checkpoint-dfly-1T-min.conf
checkpoint-study/job-generation-scripts/: generate_files.sh  generate_files_bck.sh  generate_files_bck_cont.sh  generate_files_cont.sh  generate_files_nobck.sh  generate_files_nobck_cont.sh
checkpoint-study/workload-files/: workload-1024-7500.conf  workload-1024.conf  workload-2048-6000.conf  workload-2048.conf  workload-4096-4000.conf  workload-4096.conf  workload-512-8000.conf  workload-512.conf  workload-8192-600.conf  workload-8192.conf
codes/: Makefile.subdir  codes-external-store.h  codes-store-cli.h  codes-store-client-barrier-lp.h  codes-store-client-lp.h  codes-store-common.h  codes-store-lp.h  foo.h
maint/: codes-storage-server.pc.in
src/: Makefile.subdir  codes-store-cli.c  codes-store-common.c  codes-store-lp.c  foo.c
src/client/: README.txt  barrier.c  barrier.h  client-dummy.c  client-mul-wklds.c  client.c  client.h  codes-store-cli.c  codes-store-client-barrier-lp-impl.c  codes-store-client-lp-impl.c  dist.c  dist.h  io-sim-mode.c  io-sim-mode.h  oid-map.c  oid-map.h
src/placement/: comb.h  input-generator.c  input-generator.h  objects.c  objects.h  placement-benchmark.c  placement-euclid-1d.c  placement-euclid-1d.h  placement-euclid-2d.c  placement-euclid-2d.h  placement-hash-spooky.c  placement-hash-spooky.h  placement-hash.c  placement-hash.h  placement-mod.h  placement-multiring.c  placement-multiring.h  placement-virt.c  placement-virt.h  placement-xor.c  placement.h
src/server/: codes-ex-store-api.c  codes-ex-store-lp-impl.c  codes-store-lp-api.c  codes-store-lp-impl.c  codes-store-lp-internal.h  codes-store-lp.c  codes-store-pipeline.c  codes-store-pipeline.h  rosd-common.h  rosd-creq.c  rosd-creq.h  rosd.c  rosd.h
src/util/: io-sim-mode.c  map_util.c  map_util.h  msg.c  msg.h  wkld_config.c  wkld_config.h
tests/: Makefile.subdir  dummy.c  rosd-test-client.c  rosd-test-client.h  rosd-test-simple.c  rosd-test-simple.sh  test-checkpoint.c  test-checkpoint.h  test-checkpoint.sh  test-client-checkpoint.c  test-client.c  test-client.h  test-simple.c  test-simple.sh  test-store-client.c
tests/conf/: allocation-200-392.conf  allocation.conf  rosd-test-simple-big.conf  rosd-test-simple.conf  test-checkpoint-dfly-1T.conf  test-checkpoint-dfly.conf  test-checkpoint-sn.conf  test-checkpoint.conf  test-cs-client.conf  test-dragonfly.conf  test-simple-big.conf  test-simple.conf  workload-9K-bb.conf  workloads-1K-bb.conf
tests/conf/iokernel/: testmeta.txt  (+1 more)
(+28 files in other folders)
